spacing fixes

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -190,7 +190,7 @@
   }
 
   #about {
-    margin-top: 1rem;
+    margin-top: -3rem;
   }
 
 }
